# simon-rw-lance

./: README.md  pyproject.toml
.github/workflows/: ci.yml
app/api/: auth.py  components.py  database.py  main.py  settings.py
app/api/routers/: raider_calc.py  wow_tools.py
app/static/: client.js  database.json
app/static/campaigns/freddy/: testy.csv
app/static/css/: base.css  mystyle.css  style3.css
app/static/styles/: base.css
app/templates/: base.html  contact.html  home.html  welcome.html  wow_tools.html
app/templates/components/: message_box.html
app/templates/include/: sidebar.html  topnav.html
app/templates/pages/: login.html  overview.html
app/templates/phd/: CoolStars21.html  about.html  convection.html  planets.html  teaching.html
app/templates/wow_tools/: character.html
docs/: build.sh  index.html
docs/source/: conf.py  index.rst
docs/source/_autosummary/: simon_lance.rst  simon_lance.test.rst
lib/simon_lance/: __init__.py
tests/integration/: test_installation.py
